--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,23 @@
     <title>Task Funnel</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="../static/angularController.js"></script>
     <style>
+    .inputs{
+    box-shadow: 0 2px 3px 0 rgba(0,0,0,0.24), 0 3px 9px 0 rgba(0,0,0,0.19);
+    background-color: #66b3ff;
+    border-style: none;
+    margin:10px;
+    padding: 10px ;
+    border-width: 0.5px;
+    text-align: center;
+    resize: both;
+    overflow: auto;
+    }
     .button{
     border:0px;
-    margin:20px 0px 10px 0px;
-    box-shadow: 0 8px 12px 0 rgba(0,0,0,0.24), 0 12px 37px 0 rgba(0,0,0,0.19);
+    margin:20px 0px 20px 0px;
+    box-shadow: 0 2px 3px 0 rgba(0,0,0,0.24), 0 3px 9px 0 rgba(0,0,0,0.19);
     background-color: #008ae6;
     padding: 5px 20px 5px 20px;
     font-family: Candara, sans-serif;
@@ -18,39 +30,59 @@
     }
     .button:hover{
     transform: translateY(-1px);
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 12px 18px 0 rgba(0,0,0,0.24), 0 17px 55px 0 rgba(0,0,0,0.19);
     background-color: #007acc;
     color:white;
     }
     .button:active{
     transform: translateY(0.5px);
-    box-shadow: 0 11px 11px 0 rgba(0,0,0,0.24), 0 16px 49px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 11px 17px 0 rgba(0,0,0,0.24), 0 16px 54px 0 rgba(0,0,0,0.19);
     background-color: #006bb3;
     color:white;
     }
+    .dropdown{
+    display: none;
+    background-color: #f9f9f9;
+    min-width: 16px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    margin:20px;
+    }
 
-
-
+    .dropdown:hover {
+    display: block;
+    }
+    .motherBoard{
+    position:relative;
+    margin:0px 0px 10px 40px;
+    width:92%;
+    height:70%;
+    background-color:#99ccff;
+    padding:10px;
+    box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 6px 19px 0 rgba(0,0,0,0.19);
+    }
 
 
     </style>
 </head>
-<body ng-app="taskFunnel" ng-controller="myCtrl"
-      style="margin: 0px; padding: 0px; height: 100%;background-color: #f3f3f3;">
+<body ng-app="TF" ng-controller="myCtrl" style="margin: 0px; padding: 0px; height: 100%;background-color: #f3f3f3;">
 <div style="background-color:#008ae6;padding:10px;color:white;font-family: Papyrus, fantasy;font-weight: bold; box-shadow: 0 8px 12px 0 rgba(0,0,0,0.24), 0 12px 37px 0 rgba(0,0,0,0.19);">
     <h1 style="margin:5px 0px 5px 30px;display:inline;">Task Funnel</h1>
     <!--Top band for heading-->
 </div>
-<div style="margin-left:40px;margin-bottom:10px;">
+<div style="margin-left:40px;margin-top:10px;">
     <button class="button">Parent task</button>
 </div>
-<div style="position:relative;margin:auto;width:90%;height:70%;background-color:#99ccff;padding:10px; box-shadow: 0 8px 12px 0 rgba(0,0,0,0.24), 0 12px 37px 0 rgba(0,0,0,0.19);">
+<div class="motherBoard">
     <div>task type(Epic, story, subtask, float, float-subtask)</div>
+    <select class="dropdown" type="text"> <!--ng-model="taskType" ng-options="x for x in taskTypes"-->
+        <option value="volvo">Volvo</option>
+    </select>
     <div>status</div>
     <div>progress bar/story points</div>
 
-    <div style="font-size:200%;width:100%; text-align: center;">Task title</div>
-<div>description</div>
+    <input ng-model="taskTitle" class="inputs" style="font-size:200%;"> </input>
+    <div>description</div>
 
     <div style=" position: absolute; bottom: 0;width:100%">
         <button class="button">Child</button>
