--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     background-color: #66b3ff;
     border-style: none;
     margin:10px;
-    padding: 10px ;
+    padding: 5px ;
     border-width: 0.5px;
     text-align: center;
     resize: both;
@@ -41,16 +41,13 @@
     color:white;
     }
     .dropdown{
-    display: none;
-    background-color: #f9f9f9;
-    min-width: 16px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    margin:20px;
-    }
-
-    .dropdown:hover {
-    display: block;
+    vertical-align:top;
+    margin:10px;
+    display:inline;
+    padding: 5px 10px;
+    background-color: #66b3ff;
+    border-style:none;
+    box-shadow: 0 2px 3px 0 rgba(0,0,0,0.24), 0 3px 9px 0 rgba(0,0,0,0.19);
     }
     .motherBoard{
     position:relative;
@@ -59,7 +56,7 @@
     height:70%;
     background-color:#99ccff;
     padding:10px;
-    box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 6px 19px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 2px 3px 0 rgba(0,0,0,0.24), 0 3px 9px 0 rgba(0,0,0,0.19);
     }
 
 
@@ -74,14 +71,13 @@
     <button class="button">Parent task</button>
 </div>
 <div class="motherBoard">
-    <div>task type(Epic, story, subtask, float, float-subtask)</div>
-    <select class="dropdown" type="text"> <!--ng-model="taskType" ng-options="x for x in taskTypes"-->
-        <option value="volvo">Volvo</option>
-    </select>
+
+    <select class="dropdown" type="text" ng-model="taskType" ng-options="x for x in taskTypes"></select>
+
+    <input ng-model="taskTitle" class="inputs" style="font-size:200%;display:inline;"> </input>
+
     <div>status</div>
     <div>progress bar/story points</div>
-
-    <input ng-model="taskTitle" class="inputs" style="font-size:200%;"> </input>
     <div>description</div>
 
     <div style=" position: absolute; bottom: 0;width:100%">
