Progress in retrieval of tasks.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -93,6 +93,7 @@
     <button class="button">Parent task</button>
     <button class="button" ng-click="showJson()">show json</button>
     <button class="button" ng-click="save()">save task</button>
+    <button class="button" ng-click="temp()">temp</button>
 </div>
 <div class="motherBoard">
 
