downloaded angular for offline work.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="Content-Type" content="charset=UTF-8"/>
     <title>Task Funnel</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>-->
     <!--<script src="../static/angularController.js"></script>-->
     <script type="text/javascript" th:src="@{/angularController.js}"/>
+    <script type="text/javascript" th:src="@{/angular.min.js}"/>
     <style>
     .header{
     height:10%;
@@ -100,6 +101,26 @@
     overflow-y:auto;
     box-shadow: 0 2px 3px 2px rgba(0,0,0,0.24), 0 3px 9px 2px rgba(0,0,0,0.19);
     }
+    .buttonHeader{
+    font-family: Candara, sans-serif;
+    display:inline;
+    float:right;
+    vertical-align:center;
+    padding:0px 5px;
+    margin:0px;
+    height:100%;
+    width:10%;
+    background-color:#000099;
+    color:white;
+    border-style:solid;
+    border-width:0px 0px 0px 0.5px;
+    }
+    .buttonHeader:hover{
+    background-color:#000077;
+    }
+    .buttonHeader:active{
+    background-color:#000066;
+    }
     </style>
 </head>
 <body class="body" ng-app="TF" ng-controller="myCtrl">
@@ -108,11 +129,17 @@
     <img th:src="@{/images/funnel.png}"
          style="display:inline;margin:0px;height:100%;vertical-align:middle;width:50px;padding:0px;"/>
     <h1 style="margin:5px 0px 5px 10px;display:inline;padding:10px 0px 10px 0px;vertical-align:middle;">Task Funnel</h1>
+    <button class="buttonHeader">new objective</button>
+    <button class="buttonHeader">new float</button>
     <!--Top band for heading-->
 </div>
 <div class="navigator">
     <div style="padding:5px 20px 10px 20px;font-size:120%;text-align:center;margin:0px;box-shadow: 0 2px 3px 0 rgba(0,0,0,0.24), 0 3px 9px 0 rgba(0,0,0,0.19);background-color: #0000b3;font-family: Candara, sans-serif;color: white;">
         Navigation
+    </div>
+    <div ng-repeat="task in allTasks track by task.id">
+        <button class="button" style="margin:10px 0px; width:100%;">{{task.title}}</button>
+
     </div>
 </div>
 <div style="margin-left:40px;margin-top:10px;">
@@ -154,7 +181,7 @@
 
     <div class="inputs" style="width:95%;float:left;">Quarter 2, Sprint 4 Last modified: day date</div>
 
-    <textarea class="inputs" type="text" ng-model="description"
+    <textarea class="inputs" type="text" ng-model="description" placeholder="description"
               style="margin:10px;color:black;width:50%;font-family: candara;border-size:0px;border-style:none; background-color: #8080ff;float:left;text-align:left;height:40%;">Description</textarea>
 
 
